tests/errors/wrong_val_57/e2.src
.IPPcode21

DEFVAR GF@a

IDIV GF@a int@25 int@0
